# LLM-Game-Playing-Agents

./: .gitignore  README.md  analyze_frame.py  asterix_training.py  atari_space_invader.py  breakout_advanced_test.py  breakout_ocatari_LLM_agent.py  breakout_training.py  chess_LLM_agent.py  enduro_training.py  evaluate_Pong_policy.py  evaluate_baselines.py  evaluate_policy.py  freeway_training.py  human_player.py  install.sh  logging_util.py  plot_performance.py  plotting_game_perf.py  pong_LLM_agent.py  pong_ai_trace.py  pong_env.py  pong_ocatari_LLM_agent.py  pong_training.py  pyproject.toml  qbert_training.py  requirements_baselines.txt  riverraid_ocatari_LLM_agent.py  seaquest_training.py  simple_pong_ai.py  space_invader_trace.py  space_invader_trace_final.py  space_invaders_ocatari_LLM_agent.py  space_invaders_training.py  test_policy.py  train_baselines.py  training_utils.py
best_policies/: Breakout.py  Pong.py  SpaceInvaders.py
logs/: perf_BreakoutNoFrameskip-v4_20250312_190211_skip4_sticky0.0_horizon300_optimSteps100_mem5.csv  perf_PongNoFrameskip-v4_20250305_204211_skip4_sticky0.0_horizon400_optimSteps20_mem5.csv
results/aggregated/: all_games_aggregate.csv
trace_ckpt/BreakoutNoFrameskip-v4_20250312_190211_skip4_sticky0.0_horizon300_optimSteps100_mem5/: 0.pkl  1.pkl  10.pkl  11.pkl  13.pkl  15.pkl  16.pkl  18.pkl  19.pkl  2.pkl  20.pkl  22.pkl  23.pkl  24.pkl  25.pkl  26.pkl  27.pkl  29.pkl  31.pkl  33.pkl  35.pkl  (+9 more)
trace_envs/: asterix.py  breakout.py  enduro.py  freeway.py  pong.py  qbert.py  seaquest.py  space_invaders.py
trained_policies/: Pong.py
(+20 files in other folders)
