[project]
name = "llm-game-playing-agents"
version = "0.1.0"
description = "Add your description here"

readme = "README.md"
requires-python = ">3.9,<3.13"
dependencies = [
    "ale-py>=0.11.2",
    "beautifulsoup4>=4.14.3",
    "google-genai>=1.47.0",
    "gymnasium[accept-rom-license,atari]>=1.1.1",
    "ipdb>=0.13.13",
    "keyboard>=0.13.5",
    "matplotlib>=3.9.4",
    "numpy<2.0.0",
    "opencv-python==4.8.1.78",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "pyfiglet>=1.0.4",
    "pygame>=2.6.1",
    "pynput>=1.8.1",
    "requests>=2.32.5",
    "rtpt>=0.0.4",
    "scikit-image>=0.24.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "stable-baselines3>=2.7.1",
    "termcolor>=3.1.0",
    "tqdm>=4.67.2",
    "trace-opt>=0.1.3.8",
]


[tool.uv.workspace]
members = [
    "external/OC_Atari",
]

[dependency-groups]
ocatari = [
    "ale-py>=0.11.2",
    "beautifulsoup4>=4.14.3",
    "gymnasium>=1.1.1",
    "ipdb>=0.13.13",
    "keyboard>=0.13.5",
    "matplotlib>=3.9.4",
    "numpy<2.0.0",
    "opencv-python==4.8.1.78",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "pyfiglet>=1.0.4",
    "pygame>=2.6.1",
    "pynput>=1.8.1",
    "requests>=2.32.5",
    "rtpt>=0.0.4",
    "scikit-image>=0.24.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "stable-baselines3>=2.7.1",
    "termcolor>=3.1.0",
    "tqdm>=4.67.2",
]
